# github-repo-digest

./: .gitignore  CLAUDE.md  README.md  config.env.example  pyproject.toml  setup_cron.sh
github_repo_digest/: __init__.py  categorizer.py  config.py  emailer.py  github_client.py  main.py  ranker.py  summarizer.py
github_repo_digest/templates/: digest.html
