[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-repo-digest"
version = "0.2.0"
description = "Weekly digest agent for any GitHub repository — summarizes merged and in-review PRs with AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Raghu Babu"},
]

dependencies = [
    "anthropic>=0.39.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
bedrock = [
    "anthropic[bedrock]>=0.39.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
repo-digest = "github_repo_digest.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"
